deployments/services/cert-manager-cloudflare.yaml
apiVersion: networking/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: cloudflare-issuer
    cert-manager.io/issuer-kind: OriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
  name: ingress-cloudflare
  namespace: kube-system
spec:
  rules:
    - host: oci.sredevops.cl
      http:
        paths:
          - backend:
              serviceName: Kubernetes
              servicePort: 443
            path: /
  tls:
    # specifying a host in the TLS section will tell cert-manager 
    # what DNS SANs should be on the created certificate.
    - hosts:
        - sredevops.cl
      # cert-manager will create this secret
      secretName: sredevops-cl-tls
