deployments/services/ingresses.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx

---
# Create a nginx deployment with a single replica and expose it as a service.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx  
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations: # use traefik ingress controller
    kubernetes.io/ingress.class: traefik
    app.kubernetes.io/name: nginx
    
spec:
  tls:
  - hosts:
    - oci.sredevops.cl
    secretName: sredevops-cl-tls
  rules:
  - host: oci.sredevops.cl
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx
            port:
              number: 80
