deployments/services/tlsstore.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`traefik.sredevops.cl`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      ##middlewares:
        ##- name: auth
  tls:
    store:
      name: default-cloudflare-tls
